--- a/css/styles.css
+++ b/css/styles.css
@@ -1,219 +1,278 @@
+/* BACKGROUND */
+/* BORDER */
 /* ---- RESET ----*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Helvetica, sans-serif;
-    border: none;
-    outline: none;
-    color: white;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
+  border: none;
+  outline: none;
 }
 
 /* ---- CUSTOM STYLES ---- */
-
-body{min-height: 100vh; background-color: #080f28;}
-
-button{background-color:transparent;}
-
-nav{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 10px;
-    background-color: #141a32;
+body {
+  min-height: 100vh;
+  background-color: #080f28;
 }
 
-.nav-title{margin: 5px 0px;}
-
-input{
-    padding: 4px;
-    border-radius: 5px;
-    text-align: center;
-    color: black;
+button {
+  padding: 8.5px;
+  background-color: transparent;
+  border-radius: 5px;
+}
+button:hover {
+  cursor: pointer;
 }
 
-input:focus{outline: 2px solid #007aff; color: black;}
-
-.media-container{
-    position: relative;
-
-    display: grid;
-    grid-template-columns: repeat(4, minmax(100px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-    place-items: center;
-    gap: 25px;
-
-    width: 100%;
-    padding: 20px;
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+  background-color: #141a32;
+}
+nav .nav-title {
+  margin: 5px 0px;
+  color: white;
+}
+nav input {
+  padding: 5px;
+  border-radius: 5px;
+  text-align: center;
+  color: black;
+}
+nav input:focus {
+  outline: 2px solid #007aff;
 }
 
-.movie-card{
-    position: relative;
-    width: 200px;
-    height: 300px;
+textarea {
+  resize: none;
 }
 
-.movie-card:hover{cursor: pointer;}
-
-.movie-content{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-
-    z-index: -3;
-
-    width: 100%;
-    height: 100%;
+.media-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(100px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  place-items: center;
+  gap: 20px;
+  width: 100%;
+  min-height: 100vh;
+  padding: 20px;
 }
 
-.movie-card:hover > .movie-content > .movie-card-info-container{visibility: visible;}
-
-.movie-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -5;
+.movie-card {
+  position: relative;
+  width: 200px;
+  height: 300px;
+}
+.movie-card:hover {
+  cursor: pointer;
+  opacity: 90%;
+}
+.movie-card .movie-card__img {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.modal-container{
-    display: flex;
-    position: absolute;
-    z-index: 998;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-
-    align-items: center;
-    justify-content: center;
-
-    width: 100%;
-    min-height:100vh;
-    background-color: rgba(0, 0, 0, 0.842);
+.modal-container {
+  display: flex;
+  position: absolute;
+  z-index: 998;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.842);
+}
+.modal-container .modal-container-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 40px;
+  color: white;
+}
+.modal-container .modal-container-btn:hover {
+  cursor: pointer;
 }
 
-.modal-window{
-    display: flex;
-    max-width: 555px;
-    height: 400px;
-
-    background-color: #141a32;
-    border-radius: 5px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+.modal-window {
+  display: flex;
+  max-width: 555px;
+  height: 400px;
+  background-color: #141a32;
+  border-radius: 5px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.modal-window .modal-img {
+  object-fit: cover;
+  height: 100%;
+}
+.modal-window .modal-info-container {
+  width: 100%;
+  padding: 10px;
+}
+.modal-window .modal-title, .modal-window .modal-mediatype, .modal-window .modal-sinopsis-title, .modal-window .modal-description {
+  color: white;
+}
+.modal-window .modal-mediatype {
+  margin-bottom: 12px;
+  font-size: 14.5px;
+  font-weight: normal;
+}
+.modal-window .modal-title {
+  margin-top: 5px;
+}
+.modal-window .modal-description {
+  margin-top: 10px;
+  text-align: justify;
+}
+.modal-window .modal-imdb-btn {
+  background-color: #ffcd35;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+.modal-window .modal-imdb-btn:hover {
+  background-color: #ffc005;
+  transition: 230ms ease-in-out all;
+}
+.modal-window .modal-sinopsis-title {
+  font-weight: bold;
+}
+.modal-window .modal-imdb-btn a {
+  text-decoration: none;
+  color: black;
 }
 
-.modal-img{object-fit: cover; height: 100%;}
-
-.modal-info-container{width: 100%; padding: 10px;}
-
-.modal-mediatype{
-    margin-bottom: 12px;
-    font-size: 14.5px;
-    font-weight: normal;
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: 230ms all ease-in-out;
+  order: 1;
 }
 
-.modal-container-btn{
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 40px;
-    cursor: pointer;
+.btn-container {
+  margin-top: 10px;
+}
+.btn-container .add-btn {
+  background-color: #007aff;
+  color: white;
 }
 
-.modal-title{margin-top: 5px;}
-
-.modal-description{margin-top: 10px; text-align: justify;}
-
-.modal-imdb-btn{
-    background-color: #ffcd35;
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 5px;
+.add-form {
+  display: flex;
+  flex-direction: column;
+  width: 480px;
+  height: max-content;
+  padding: 15px;
+  background-color: white;
+}
+.add-form label {
+  margin: 8px 0px;
+}
+.add-form input {
+  padding: 5px;
+  border: 0.5px solid #5a5a5a;
+  border-radius: 5px;
+}
+.add-form input:focus {
+  border: 2px solid #007aff;
+  background-color: whitesmoke;
+}
+.add-form textarea {
+  border: 1px solid #5a5a5a;
+  border-radius: 5px;
+}
+.add-form textarea:focus {
+  background-color: whitesmoke;
+}
+.add-form button {
+  margin-top: 10px;
+  color: white;
+  background-color: #007aff;
+}
+.add-form button:hover {
+  background-color: #005ec2;
+  cursor: pointer;
 }
 
-.modal-sinopsis-title{font-weight: bold;}
-
-.modal-imdb-btn:hover{
-    background-color: #ffc005;
-    transition: 230ms ease-in-out all;
+footer {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  background-color: #141a32;
 }
-
-.color-black{color: black;}
-
-.modal-imdb-btn a{text-decoration: none; color: black;}
-
-.hidden{
-    visibility: hidden;
-    opacity: 0;
-    transition: 230ms all ease-in-out;
-    order: 1;
+footer span {
+  color: white;
 }
-
 
 /* ---- MEDIA QUERIES ----*/
-
-@media screen and (max-width:1259px) {
-    .media-container{
-        grid-template-columns: repeat(3, minmax(100px,1fr));
-        grid-template-rows: repeat(3, minmax(100px, 1fr));
-    }
+@media screen and (max-width: 1259px) {
+  .media-container {
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
+    grid-template-rows: repeat(3, minmax(100px, 1fr));
+  }
 }
-
-@media screen and (max-width:729px) {
-
-    .media-container{
-        grid-template-columns: repeat(2, minmax(100px,1fr));
-        grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-    }
+@media screen and (max-width: 729px) {
+  .media-container {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  }
 }
-
 @media screen and (max-width: 570px) {
-    
-    .modal-description{
-        font-size: 1.55ch;
-    }
-    .modal-window{
-        width: 480px;
-        height: 420px;
-    }
+  .modal-description {
+    font-size: 1.55ch;
+  }
+
+  .modal-window {
+    width: 480px;
+    height: 420px;
+  }
+}
+@media screen and (max-width: 494px) {
+  .media-container {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  }
+
+  .modal-description {
+    font-size: 1.5ch;
+  }
+
+  .modal-window {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 459px) {
+  .media-container {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  }
+}
+@media screen and (max-width: 454px) {
+  .media-container {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(2, minmax(100px, 1fr));
+  }
+
+  .movie-card {
+    width: 120px;
+    height: 180px;
+  }
 }
 
-@media screen and (max-width:494px) {
-
-    .media-container{
-        grid-template-columns: repeat(2, minmax(100px,1fr));
-        grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-    }
-
-    .modal-description{
-        font-size: 1.5ch;
-    }
-    .modal-window{
-        width: 450px;
-    }
-}
-
-@media screen and (max-width:459px) {
-
-    .media-container{
-        grid-template-columns: repeat(2, minmax(100px,1fr));
-        grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-    }
-}
-
-@media screen and (max-width:454px) {
-
-    .media-container{
-        grid-template-columns: repeat(2, minmax(100px,1fr));
-        grid-template-rows: repeat(2, minmax(100px, 1fr));
-    }
-
-    .movie-card{
-        width: 120px;
-        height: 180px;
-    }
-}
+/*# sourceMappingURL=styles.css.map */
