--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,13 @@ body {
   background-color: #080f28;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
 button {
   padding: 8.5px;
   background-color: transparent;
@@ -58,16 +65,16 @@ textarea {
   grid-template-columns: repeat(4, minmax(100px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
   place-items: center;
-  gap: 20px;
+  gap: 30px;
+  padding: 20px 0px;
   width: 100%;
   min-height: 100vh;
-  padding: 20px;
 }
 
 .movie-card {
   position: relative;
-  width: 200px;
-  height: 300px;
+  width: 230px;
+  height: 350px;
 }
 .movie-card:hover {
   cursor: pointer;
@@ -166,7 +173,9 @@ textarea {
 }
 
 .btn-container {
-  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
 }
 .btn-container .add-btn {
   background-color: #007aff;
@@ -242,6 +251,11 @@ footer span {
     width: 480px;
     height: 420px;
   }
+
+  .movie-card {
+    width: 200px;
+    height: 300px;
+  }
 }
 @media screen and (max-width: 494px) {
   .media-container {
@@ -268,10 +282,11 @@ footer span {
     grid-template-columns: repeat(2, minmax(100px, 1fr));
     grid-template-rows: repeat(2, minmax(100px, 1fr));
   }
-
-  .movie-card {
-    width: 120px;
-    height: 180px;
+}
+@media screen and (max-width: 360px) {
+  .media-container {
+    grid-template-columns: repeat(1, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
   }
 }
 
